--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-notifications": "~0.28.0",
     "expo-secure-store": "~13.0.1",
     "expo-speech": "~12.0.2",
+    "expo-splash-screen": "^31.0.13",
     "expo-status-bar": "~1.12.1",
     "firebase": "^12.8.0",
     "react": "18.2.0",
