--- a/package.json
+++ b/package.json
@@ -17,12 +17,18 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "expo": "~51.0.0",
+    "expo-av": "~14.0.7",
+    "expo-camera": "~15.0.16",
+    "expo-clipboard": "~6.0.3",
+    "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.10",
     "expo-linking": "~6.3.1",
     "expo-notifications": "~0.28.0",
+    "expo-print": "~13.0.1",
     "expo-secure-store": "~13.0.1",
+    "expo-sharing": "~12.0.1",
     "expo-speech": "~12.0.2",
-    "expo-splash-screen": "^31.0.13",
+    "expo-splash-screen": "~0.27.7",
     "expo-status-bar": "~1.12.1",
     "firebase": "^12.8.0",
     "react": "18.2.0",
