--- a/firebase.json
+++ b/firebase.json
@@ -6,10 +6,41 @@
             "**/.*",
             "**/node_modules/**"
         ],
-        "rewrites": [
+        "headers": [
             {
-                "source": "**",
-                "destination": "/index.html"
+                "source": "**/*.@(ttf|otf|woff|woff2|eot)",
+                "headers": [
+                    {
+                        "key": "Access-Control-Allow-Origin",
+                        "value": "*"
+                    },
+                    {
+                        "key": "Cache-Control",
+                        "value": "public, max-age=31536000, immutable"
+                    },
+                    {
+                        "key": "Content-Type",
+                        "value": "font/ttf"
+                    }
+                ]
+            },
+            {
+                "source": "**/*.@(jpg|jpeg|gif|png|svg|webp|ico)",
+                "headers": [
+                    {
+                        "key": "Cache-Control",
+                        "value": "public, max-age=31536000, immutable"
+                    }
+                ]
+            },
+            {
+                "source": "**/*.@(js|css)",
+                "headers": [
+                    {
+                        "key": "Cache-Control",
+                        "value": "public, max-age=31536000, immutable"
+                    }
+                ]
             }
         ]
     }
