--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-speech": "~12.0.2",
     "expo-splash-screen": "^31.0.13",
     "expo-status-bar": "~1.12.1",
+    "expo-vector-icons": "^10.0.1",
     "firebase": "^12.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -32,6 +33,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-vector-icons": "^10.3.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
